--- a/anggota.css
+++ b/anggota.css
@@ -50,3 +50,13 @@ input[type="submit"]:hover {
 label {
     color: white;
 }
+@media only screen and (max-width: 768px) {
+    .container {
+        width: 90%;
+        padding: 10px; 
+    }
+
+    h1 {
+        font-size: 24px;
+    }
+}
