--- a/anggota.css
+++ b/anggota.css
@@ -56,6 +56,11 @@ label {
         padding: 10px; 
     }
 
+    .content {
+        width: 90%;
+        padding: 10px;
+    }
+
     h1 {
         font-size: 24px;
     }
